--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,7 @@ html{
 .jumbotron {
   width: 100%;
   height: 31rem;
-  background-image: image("https://github.com/kbussert/Tortoiseshell/blob/master/resources/images/glasses-bg.png");
+  background-image: url("Tortoiseshell/resources/images/glasses-bg.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
